--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		
 		<ul>
 			<li><strong>Akshita Agrawal</strong></li>
-			<li>ITMD-361</li>
-			<li>Lab 3</li>
+			<li><strong>ITMD-361</strong></li>
+			<li><strong>Lab 3</strong></li>
 		</ul>
 	</body>
 </html>
